# CMakeSolutionTemplate

./: CMakeLists.txt  Makefile  README.md
CMakeTools/DefaultBuildOption/: x86_64.cmake
CMakeTools/Template/App/: CLI.cmake  Win32.cmake
CMakeTools/Template/Lib/: Shared.cmake  Static.cmake
CMakeTools/ToolChain/: clang-mingw32.cmake  clang-msvc-x86.cmake  gcc-mingw32.cmake
source/App/: CMakeLists.txt
source/App/CLI/: CMakeLists.txt
source/App/CLI/Src/: main.cpp
source/App/Win32/: CMakeLists.txt
source/Lib/: CMakeLists.txt
source/Lib/LibA/: CMakeLists.txt
source/Lib/LibA/Inc/: LibA.h
source/Lib/LibA/Src/: LibA.cpp
source/Lib/LibB/: CMakeLists.txt
source/Lib/LibB/Inc/: LibB.h
source/Lib/LibB/Src/: LibB.cpp
source/Lib/Vector/: CMakeLists.txt
source/Lib/Vector/Inc/: Vector.h
source/Lib/Vector/Src/: Vector.cpp
source/Lib/stdLib/: CMakeLists.txt
source/Lib/stdLib/Inc/: stdLib.h
source/Lib/stdLib/Src/: stdLib.cpp
